<resources>
    <string name="app_name">TieBaoBei</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_button_label">Login</string>
    <string name="password_hint">密码</string>
    <string name="username_hint">手机号／用户名／邮箱</string>

    <string name="menu_setting_center">设置中心</string>
    <string name="menu_loging">登陆</string>
    <string name="menu_signUp">注册</string>
    <string name="menu_setting">设置</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_aboutUs">关于我们</string>
    <string name="menu_contactUs">联系我们</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="signUp_company_title">智象重工</string>
    <string name="signUp_userName">用户名</string>
    <string name="signUp_email">邮箱</string>
    <string name="signUp_password">密码</string>
    <string name="signUp_comfirm_password">确认密码</string>
    <string name="signUp_sign_up">注册</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="setting_check_update">检查更新</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_update_version">版本号1.1.1</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_introduce_us">IntroduceUsActivity</string>
    <string name="title_activity_choose_machine_model">ChooseMachineModelActivity</string>

    <string name="machine_big_Excavator">大型挖掘机</string>
    <string name="machine_small_Excavator">小型挖掘机</string>
    <string name="machine_mixer_truck">搅拌车</string>
    <string name="machine_pumb_truck">泵车</string>
    <string name="machine_mortar_pump">砂浆泵</string>
    <string name="machine_loader_truck">装载机</string>
    <string name="machine_bulldozer">推土机</string>
    <string name="machine_crane">起重机</string>
    <string name="machine_accessories">配件</string>
    <string name="machine_other">其他</string>
    <string name="title_activity_show_products">ShowProductsActivity</string>
    <string name="title_activity_sell_car_information">SellCarInformationActivity</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_image_fiele">ImageFiele</string>
    <string name="title_activity_show_all_photo">ShowAllPhoto</string>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish1">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="title_activity_choose_car_site">ChooseCarSiteActivity</string>
    <string name="title_activity_show_sell_car_detail_information">
        ShowSellCarDetailInformationActivity
    </string>


    <string name="yun_character">&#65509;</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="title_activity_show_search_result">ShowSearchResultActivity</string>
    <string name="title_activity_wei_xin_dialog">WeiXinDialogActivity</string>


    <string name="recorder_nomal">按住说话</string>
    <string name="recorder_recording">松开结束</string>
    <string name="recorder_want_cancel">松开手指，取消发送</string>

</resources>
