<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#464343"

    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25dp"
        android:gravity="center"
        android:background="#F5740A"
        android:textColor="#FFFFFF"
        android:text="@string/menu_setting_center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:showDividers="middle|end"
        android:divider="@drawable/mydivider"

        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/login_left_menu_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/menu_loging"/>

    <TextView
        android:id="@+id/signUp_left_menu_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/menu_signUp"/>

    <TextView
        android:id="@+id/setting_left_menu_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/menu_setting"/>

        <TextView
        android:id="@+id/feedBack_left_menu_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/menu_feedback"/>

        <TextView
        android:id="@+id/aboutUs_left_menu_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/menu_aboutUs"/>
    </LinearLayout>
</LinearLayout>
