<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhixiangzhonggong.tiebaobei.Activity.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="#096EAD"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/setting_back_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_gravity="left"
                android:layout_weight="0.5"
                android:src="@drawable/white_arrow"/>

            <TextView
                android:id="@+id/back_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="返回"
                android:gravity="left"
                android:textColor="#FFFFFF">
            </TextView>

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text= "设置"
                android:textColor="#FFFFFF">
            </TextView>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:showDividers="middle|end"
            android:divider="@drawable/mydivider"
            android:layout_marginTop="120dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/feedBack_left_menu_id"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textSize="20dp"
                android:layout_weight="5"
                android:gravity="center|left"
                android:text="@string/menu_feedback"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
               android:layout_marginRight="5dp"
                android:src="@drawable/double_arrow"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/aboutUs_left_menu_id"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="5"
                android:textSize="20dp"
                android:gravity="center|left"
                android:text="@string/menu_aboutUs"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:src="@drawable/double_arrow"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/login_left_menu_id"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textSize="20dp"
                android:layout_weight="5"
                android:gravity="center|left"
                android:text="@string/setting_check_update"/>
        <TextView
            android:paddingRight="2dp"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:layout_weight="2"
            android:gravity="center|left"
            android:text="@string/setting_update_version"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:src="@drawable/double_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
                android:id="@+id/signUp_left_menu_id"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textSize="20dp"
                android:layout_weight="5"
                android:gravity="center|left"
                android:text="@string/setting_clear_cache"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:src="@drawable/double_arrow"/>

    </LinearLayout>

        </LinearLayout>

</RelativeLayout>
