<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhixiangzhonggong.tiebaobei.Activity.SignUpActivity"
    android:orientation="vertical"
    android:background="#F5E8E4"
    >
        <LinearLayout
            android:id="@+id/sign_up_input_field_id"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#395691"
            android:layout_weight="2.4"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/sign_up_back_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_gravity="left"
                android:layout_weight="1"
                android:src="@drawable/white_arrow"/>

            <TextView
                android:id="@+id/back_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="返回"
                android:gravity="left"
                android:textColor="#FFFFFF">
            </TextView>

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text= "注册"
                android:textColor="#FFFFFF">
            </TextView>
            <TextView
                android:id="@+id/sign_up_login_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text= "登录"
                android:textColor="#FFFFFF">
            </TextView>

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/zhixiangimage"
            android:layout_gravity="center">
        </ImageView>
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"

        android:gravity="center">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:gravity="center"
                android:textSize="20dp"
                android:text="用户名:"/>
            <EditText
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:hint="@string/signUp_userName"
                >
                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded"
            android:orientation="horizontal">
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textSize="20dp"
                android:text="邮箱:"/>
            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_below="@+id/emailField"
                android:layout_alignLeft="@id/emailField"
                android:hint="@string/signUp_email"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded"
            android:orientation="horizontal">
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textSize="20dp"
                android:text="密码:"/>
            <EditText

                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_below="@+id/emailField"
                android:layout_alignLeft="@id/passwordText"
                android:hint="@string/signUp_password"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="10dp"
                android:gravity="center"
                android:textSize="20dp"
                android:text="确认密码:"/>
            <EditText
                android:paddingLeft="10dp"
                android:id="@+id/confirmPwText"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_below="@+id/passwordText"
                android:layout_alignLeft="@id/confirmPwText"
                android:hint="@string/signUp_comfirm_password"
                />
        </LinearLayout>


        <Button
            android:id="@+id/signupButton"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded2"
            android:text="@string/signUp_sign_up"
            android:layout_below="@+id/confirmPwText"
            android:layout_alignLeft="@id/emailField"/>
    </LinearLayout>

</LinearLayout>